# console_blurred

./: .gitignore  1.0.0  README.md  call cmd as py virtual env.bat  console_blurred.py  console_blurred_as_gui.py  console_blurred_as_scheduler.py  console_blurred_exe_kill.bat  console_blurred_exe_rebuild and run for development.bat  console_blurred_exe_rebuild and run server for development.bat  console_blurred_exe_run.bat  fastapi_server.py  fastapi_server_.py  fastapi_server_for_books.py  fastapi_server_for_fastapi_official_example_and_testing.py  fastapi_server_for_members.py  fastapi_server_for_members_db_volatile.py  fastapi_server_for_todo.py  git push by manual.bat  index.bat  index.py  index.spec  macro.txt  main.py  package-lock.json  pyproject.toml  server_fastapi.py  server_fastapi_for_books_db_json.py  server_fastapi_for_fastapi_official_example_and_testing.py  server_fastapi_for_members_db_json.py  server_fastapi_for_samples.py  server_fastapi_for_volatile.py  server_fastapi_via_db_json.py  server_fastapi_via_volatile.py  sprint_core.py  test foo_py as virtual env.bat  test.py  test_core.py  test_schedule.py  test_simple.py
$cache_database/: db.toml  useless_file_names.txt
$cache_json/: books.json
$cache_mp3/: desktop.ini
$cache_prison/: __legacy__.py  destory `........   destroy tree without overwrite.bat  directorize files by name.bat  explorer github for now check.bat  explorer my_google_drive.bat  file_transfer_server download.bat  file_transfer_server run.bat  organize files by img.bat  organize_all_zip_files_to_bkup.bat  organizer.classifiyFilesByJhp.bat  rdp-82106.bat  rdp-DESKTOP-5NCL18I.bat  rdp-WIN10PROPC3.bat  rdp-raspi20230820.bat  ren something deploy.zip.bat  restart explorer_exe.bat  restart utorrent.bat  shutdown -r.bat  shutdown -s -t 3600.bat  shutdown -s -t 600.bat  taskkill -f -im chrome_exe.bat  taskkill -f -im potplayer_exe.bat  taskkill UselessPrograms.bat.bat  taskkill alsong per 10min.bat  taskkill utorrent.bat  taskkill_ALSong_exe.bat  taskkill_cmd_exe.bat  test_async_loop_and_thread.py  test_asyncio.py  test_pynput.py  test_pyside6_debugger.py  test_pyside6_macro.py  test_pyside6_notepad.py  test_schedule.py  test_threadpool.py
$cache_work_for_music/: PotPlayer64.dpl
MSAs/fastapi-server-via-vercel/: easy starter kit for nextjs-fastapi-starter.txt
MSAs/fastapi-server-via-vercel/api/: index.py
MSAs/fastapi_server_via_vercel/: deploy commands.txt  easy starter kit for nextjs-fastapi-starter.txt
MSAs/fastapi_server_via_vercel/nextjs-fastapi/: requirements.txt
MSAs/fastapi_server_via_vercel/nextjs-fastapi/api/: db.json  index.py
MSAs/json_db/: db_bkup.json  deploy commands.txt  json_db.py
MSAs/json_db_via_fastapi/: deploy commands.txt  json_db.py  vercel.json  vercel_.json
MSAs/json_db_via_json_server_node_pkg/: deploy commands.txt
MSAs/json_db_via_vercel/: README.md  vercel.json  vercel__.json
MSAs/vercel_proxy_server/: deploy commands.txt  requirements.txt  vercel.json
pkg_jq/: READ_ME.md
pkg_park4139_for_windows/: __init__.py
pkg_routers/: __init__.py  router_book.py  router_commutation_management.py  router_item_util.py  router_join.py  router_login.py  router_main.py  router_member_join.py  router_member_login.py  router_member_test.py  router_member_util.py  router_nav_items.py  router_todo_util.py  router_user.py  router_user_util.py
pkg_web/templates/: developer.html  index.html
pkg_web/templates/admin/: main.html
pkg_web/templates/errors/: main.html
pkg_web/templates/member/: faq_board.html  join.html  login.html  main.html
pkg_web/templates/temp/: developer.html
