[tool.poetry]
name = "console-blurred"
version = "0.1.0"
description = "auto program made by Jung Hoon Park(PARK4139)"
authors = ["JUNG HOON PARK <pjh4139@gmail.com>"]
license = "not decided"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
pyautogui = "^0.9.54"
pydantic = "^2.5.2"
pyglet = "^2.0.10"
pyinstaller = "^6.3.0"
pymssql = "^2.2.11"
pytest = "^7.4.3"
pytube = "^15.0.0"
requests = "^2.31.0"
selenium = "^4.16.0"
setuptools = "^69.0.2"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"
toml = "^0.10.2"
numpy = "^1.26.2"
pandas = "^2.1.4"
altgraph = "^0.17.4"
annotated-types = "^0.6.0"
attrs = "^23.1.0"
beautifulsoup4 = "^4.12.2"
blinker = "^1.7.0"
blur = "^0.4"
bs4 = "^0.0.1"
certifi = "^2023.11.17"
cffi = "^1.16.0"
charset-normalizer = "^3.3.2"
click = "^8.1.7"
clipboard = "^0.0.4"
colorama = "^0.4.6"
comtypes = "^1.2.0"
easyprocess = "^1.1"
entrypoint2 = "^1.1"
et-xmlfile = "^1.1.0"
fastapi = "^0.105.0"
ffmpeg = "^1.4"
flask = "^3.0.0"
flask-form = "^1.0.0"
flask-wtf = "^1.2.1"
googletrans = "^3.0.0"
greenlet = "^3.0.2"
gtts = "^2.4.0"
gunicorn = "^21.2.0"
hstspreload = "^2023.1.1"
imageio = "^2.33.1"
imageio-ffmpeg = "^0.4.9"
iniconfig = "^2.0.0"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.2"
keyboard = "^0.13.5"
lxml = "^4.9.3"
mako = "^1.3.0"
markupsafe = "^2.1.3"
mouseinfo = "^0.1.3"
moviepy = "^1.0.3"
mss = "^9.0.1"
mutagen = "^1.47.0"
opencv-python = "^4.8.1.78"
openpyxl = "^3.1.2"
outcome = "^1.3.0.post0"
packaging = "^23.2"
pefile = "^2023.2.7"
pillow = "^10.1.0"
playsound = "^1.3.0"
pluggy = "^1.3.0"
psutil = "^5.9.6"
proglog = "^0.1.10"
pycparser = "^2.21"
pydantic-core = "^2.14.5"
pydub = "^0.25.1"
pygetwindow = "^0.0.9"
pyinstaller-hooks-contrib = "^2023.10"
pymsgbox = "^1.0.9"
pymysql = "^1.1.0"
pyperclip = "^1.8.2"
pypiwin32 = "^223"
pyproject-hooks = "^1.0.0"
pyrect = "^0.2.0"
pyscreenshot = "^3.1"
pyscreeze = "^0.1.30"
pyside6-essentials = "^6.6.1"
pysocks = "^1.7.1"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"
pyttsx3 = "^2.90"
pytweening = "^1.0.7"
pytz = "^2023.3.post1"
pywin32 = "^306"
pywin32-ctypes = "^0.2.2"
pyyaml = "^6.0.1"
screeninfo = "^0.8.1"
shiboken6 = "^6.6.1"
six = "^1.16.0"
sniffio = "^1.3.0"
sortedcontainers = "^2.4.0"
soupsieve = "^2.5"
tqdm = "^4.66.1"
trio = "^0.23.2"
trio-websocket = "^0.11.1"
typing-extensions = "^4.9.0"
tzdata = "^2023.3"
urllib3 = "^2.1.0"
waitress = "^2.1.2"
websockets = "^12.0"
werkzeug = "^3.0.1"
wsproto = "^1.2.0"
wtforms = "^3.1.1"

[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.12.2"
blinker = "^1.7.0"
blur = "^0.4"
fastapi = "^0.105.0"
ffmpeg = "^1.4"
Flask = "^3.0.0"
clipboard = "^0.0.4"
googletrans = "^3.0.0"
gTTS = "^2.4.0"
keyboard = "^0.13.5"
lxml = "^4.9.3"
moviepy = "^1.0.3"
mutagen = "^1.47.0"
opencv-python = "^4.8.1.78"
openpyxl = "^3.1.2"
playsound = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
