[tool.poetry]
name = "console-blurred"
version = "0.1.1"
description = "auto program made by Jung Hoon Park(PARK4139)"
authors = ["JUNG HOON PARK <pjh4139@gmail.com>"]
license = "not decided"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.2"
blinker = "^1.7.0"
blur = "^0.4"
fastapi = "^0.105.0"
ffmpeg = "^1.4"
flask = "^3.0.0"
clipboard = "^0.0.4"
googletrans = "^3.0.0"
gtts = "^2.4.0"
keyboard = "^0.13.5"
lxml = "^4.9.3"
moviepy = "^1.0.3"
mutagen = "^1.47.0"
opencv-python = "^4.8.1.78"
openpyxl = "^3.1.2"
psutil = "^5.9.7"
pyautogui = "^0.9.54"
pydantic = "^2.5.2"
pyglet = "^2.0.10"
pymssql = "^2.2.11"
pytest = "^7.4.3"
pytube = "^15.0.0"
requests = "^2.31.0"
selenium = "^4.16.0"
setuptools = "^69.0.2"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"
toml = "^0.10.2"
numpy = "^1.26.2"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
